--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,92 +34,18 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_readers">ReadersActivity</string>
     <string name="large_text">
-        "Material is the metaphor.\n\n"
+        The wisdom of Birbal was unparalleled during the reign of Emperor Akbar. But Akbar’s brother in law was extremely jealous of him. He asked the Emperor to dispense with Birbal’s services and appoint him in his place. He gave ample assurance that he would prove to be more efficient and capable than Birbal. Before Akbar could take a decision on this matter, this news reached Birbal.\n\n
 
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
+Birbal resigned and left. Akbar’s brother in law was made the minister in place of Birbal. Akbar decided to test the new minister. He gave three hundred gold coins to him and said, “Spend these gold coins such that, I get a hundred gold coins here in this life; a hundred gold coins in the other world and another hundred gold coins neither here nor there.”\n\n
 
-        "Bold, graphic, intentional.\n\n"
+The minister found the entire situation to be a maze of confusion and hopelessness. He spent sleepless nights worrying how he would get himself out of this mess. Thinking in circles was making him go crazy. Eventually, on the advice of his wife, he sought Birbals help. Birbal said, “Just give me the gold coins. I shall handle the rest.”\n
 
-        "The foundational elements of print based design typography, grids, space, scale, color, "
-        "and use of imagery guide visual treatments. These elements do far more than please the "
-        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
-        "imagery, large scale typography, and intentional white space create a bold and graphic "
-        "interface that immerse the user in the experience.\n"
-        "An emphasis on user actions makes core functionality immediately apparent and provides "
-        "waypoints for the user.\n\n"
+Birbal walked the streets of the city holding the bag of gold coins in his hand. He noticed a rich merchant celebrating his son’s wedding. Birbal gave a hundred gold coins to him and bowed courteously saying, “Emperor Akbar sends you his good wishes and blessings for the wedding of your son. Please accept the gift he has sent.” The merchant felt honored that the king had sent a special messenger with such a precious gift. He honored Birbal and gave him a large number of expensive gifts and a bag of gold coins as a return gift for the king.
 
-        "Motion provides meaning.\n\n"
+Next, Birbal went to the area of the city where the poor people lived. There he bought food and clothing in exchange for a hundred gold coins and distributed them in the name of the Emperor.
 
-        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
-        "inflection points that initiate motion, transforming the whole design.\n"
-        "All action takes place in a single environment. Objects are presented to the user without "
-        "breaking the continuity of experience even as they transform and reorganize.\n"
-        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
-        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
+When he came back to town he organized a concert of music and dance. He spent a hundred gold coins on it.\n\n
 
-        "3D world.\n\n"
-
-        "The material environment is a 3D space, which means all objects have x, y, and z "
-        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
-        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
-        "position along the z-axis and has a standard 1dp thickness.\n"
-        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
-        "emulated by manipulating the y-axis.\n\n"
-
-        "Light and shadow.\n\n"
-
-        "Within the material environment, virtual lights illuminate the scene. Key lights create "
-        "directional shadows, while ambient light creates soft shadows from all angles.\n"
-        "Shadows in the material environment are cast by these two light sources. In Android "
-        "development, shadows occur when light sources are blocked by sheets of material at "
-        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
-        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
-
-        "Resting elevation.\n\n"
-
-        "All material objects, regardless of size, have a resting elevation, or default elevation "
-        "that does not change. If an object changes elevation, it should return to its resting "
-        "elevation as soon as possible.\n\n"
-
-        "Component elevations.\n\n"
-
-        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
-        "does not vary from 6dp in one app to 16dp in another app).\n"
-        "Components may have different resting elevations across platforms, depending on the depth "
-        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
-
-        "Responsive elevation and dynamic elevation offsets.\n\n"
-
-        "Some component types have responsive elevation, meaning they change elevation in response "
-        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
-        "changes are consistently implemented using dynamic elevation offsets.\n"
-        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
-        "to the component’s resting state. They ensure that elevation changes are consistent "
-        "across actions and component types. For example, all components that lift on press have "
-        "the same elevation change relative to their resting elevation.\n"
-        "Once the input event is completed or cancelled, the component will return to its resting "
-        "elevation.\n\n"
-
-        "Avoiding elevation interference.\n\n"
-
-        "Components with responsive elevations may encounter other components as they move between "
-        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
-        "through other material, components avoid interfering with one another any number of ways, "
-        "whether on a per component basis or using the entire app layout.\n"
-        "On a component level, components can move or be removed before they cause interference. "
-        "For example, a floating action button (FAB) can disappear or move off screen before a "
-        "user picks up a card, or it can move if a snackbar appears.\n"
-        "On the layout level, design your app layout to minimize opportunities for interference. "
-        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
-        "when a user tries to pick up one of cards.\n\n"
+The next day Birbal entered Akbar’s darbar and announced that he had done all that the king had asked his brother-in-law to do. The Emperor wanted to know how he had done it. Birbal repeated the sequences of all the events and then said, “The money I gave to the merchant for the wedding of his son – you have got back while on this earth. The money I spent on buying food and clothing for the poor – you will get it in the other world. The money I spent on the musical concert – you will get neither here nor there.” Akbar’s brother in law understood his mistake and resigned. Birbal got his place back.
     </string>
 </resources>
